--- a/budget/src/app/globals.css
+++ b/budget/src/app/globals.css
@@ -14,4 +14,13 @@
   }
 }
 
-
+.main-page-layout{
+    @apply 
+    flex 
+    min-h-screen 
+    flex-col 
+    items-center 
+    p-3
+    bg-black 
+   
+}
